<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:background="@color/marron">

    <TextView
        android:id="@+id/title_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_1"
        android:textSize="20sp"
        android:textColor="@color/blanco"
        android:padding="5dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/topic_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_chat"
        android:layout_marginStart="185dp"
        android:layout_toEndOf="@+id/place_chat"
        android:padding="5dp"
        android:text="@string/tema_1"
        android:textSize="15sp"
        android:textColor="@color/blanco"/>

    <TextView
        android:id="@+id/place_chat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/title_chat"
        android:padding="5dp"
        android:text="@string/lugar_1"
        android:textSize="15sp"
        android:textColor="@color/blanco"/>
</RelativeLayout>